@@ -1,6 +1,7 @@
 2019-11-08 Wiley E. Hill <wileyhill@gmail.com>
 
-    * src/s_object.c: Remove function s_object_add_net_attrib_to_object.
+    * src/s_object.c: Remove function s_object_add_net_attrib_to_object, and
+      rename s_object_add_comp_attrib_to_object s_object_add_attrib_to_object.
 
 2019-11-07 Wiley E. Hill <wileyhill@gmail.com>
 
